--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "fetch": "^1.0.0",
     "riot": "^2.4.1",
     "promise-polyfill": "^5.2.1",
-    "l20n": "^3.5"
+    "l20n": "^3.5",
+    "underscore": "^1.8.3"
   }
 }
